# textxover

./: .gitignore  ARCHITECTURE.md  README.md  demo.sh  justfile
docs/: index.html
include/: textxover.h
resources/: AppIcon.icns  Info.plist
rust/: Cargo.toml
rust/src/: comments.rs  effects.rs  lib.rs  renderer.rs  server.rs  types.rs
rust/src/shaders/: comment.wgsl  particle.wgsl
swift/: AppDelegate.swift  DisplaySelector.swift  OverlayWindow.swift  TextRasterizer.swift
web/: index.html
