[package]
name = "textxover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = "24"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rand = "0.8"
raw-window-handle = "0.6"
pollster = "0.4"
objc = "0.2"
tower-http = { version = "0.6", features = ["cors"] }
